--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			Prescher Baukonzept - Ihr zuverlässiger Partner für Rohbau, Altbau-Sanierung, Erdarbeiten und Innenausbau in und um Leipzig.
 		</title>
 		<link rel="canonical" href="https://prescher-baukonzept.de" />
+		<link rel="icon" type="image/png" href="favicon.png" />
 
 		<style>
 			* {
